2008-11-10  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.Designer.cs: Fix copyright symbol that probably did not 
	survive the dos2unix transition.

2008-11-07  Sebastien Pouliot  <sebastien@ximian.com>

	* Page.cs: Clearly specify [Serializable] on the enum (self-test)

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* swf-wizard-runner.csproj: Activate makefile integration for all the
	rules projects. Remove the old mdp files as they are no longer
	needed.

2008-10-31  Sebastien Pouliot  <sebastien@ximian.com>

	* gendarme-wizard.desktop.in: Moved from parent directory. Adjusted
	local (wrt bindir) and changed icon to our SVN file.
	* Makefile.am: Generate final .desktop file. Include the .in into
	the dist and cleanup the generated file.

2008-10-29  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.Designer.cs: Add button to save the current rules selection
	as the default one.
	* Wizard.cs: Add logic to save and load the default rules selection.
	* Properties/Settings.settings: Add a setting to keep the rules.
	Sadly it looks like VS designer cannot use generics.
	* Properties/Settings.Designer.cs: Autogenerated code for Rules.

2008-10-26  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Fix typo

2008-10-25  Sebastien Pouliot  <sebastien@ximian.com>

	* GuiRunner.cs: Implement IIgnoreList explicitly instead of implicitly
	* Wizard.cs: Change visibility of PreAssemblyUpdate and PostTypeUpdate
	to internal.

2008-10-21  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.cs: Change logic to activate rules so it can be reused
	after the analysis. This makes the before and after states identical
	and will fix the reporting of rules (along with XmlResultWriter 
	changes) to include only the one that were selected for the analysis.

2008-08-27  Sebastien Pouliot  <sebastien@ximian.com>

	* Page.cs: Add a new Options step to the enum.
	* Wizard.Designer.cs: Update (vs generated)
	* Wizard.cs: Add the new Options step to allow users to set