@@ -1,6 +1,7 @@
 [Desktop Entry]
-Encoding=UTF-8
 Type=Application
-Name=heap-snapshot-viewer
+Name=Mono Heap Snapshot Viewer
 Exec=heap-snapshot-viewer
 Terminal=false
+Icon=monodoc
+Categories=Profiling;Development;
