@@ -1,6 +1,6 @@
 [Desktop Entry]
 Version=1.0
-Name=Monodoc
+Name=Mono Documentation
 GenericName=Documentation Browser
 Comment=View, search and edit documentation related to Mono
 Exec=@bindir@/monodoc
@@ -8,4 +8,4 @@ Icon=monodoc
 StartupNotify=true
 Terminal=false
 Type=Application
-Categories=Development;
+Categories=Documentation;Development;
