@@ -1,6 +1,5 @@
 [Desktop Entry]
 Version=1.0
-Encoding=UTF-8
 Name=gsharp
 Comment=Write C# in an interactive shell, and inject your code into running Mono processes
 GenericName=Interactive C# Shell
@@ -9,4 +8,4 @@ Exec=@bindir@/gsharp
 StartupNotify=true
 Terminal=false
 Type=Application
-Categories=Development;
+Categories=Debugger;Development;
