@@ -1,3 +1,8 @@
+2008-11-12  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* gendarme-wizard.desktop.in: Add an additional category as required
+	by SUSE.
+
 2008-11-10  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Wizard.Designer.cs: Fix copyright symbol that probably did not 
